@@ -15,6 +15,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #8232: webbrowser support incomplete on Windows. Patch by Brandon
+  Milam
+
 - Issue #24347: Set KeyError if PyDict_GetItemWithError returns NULL.
 
 - Issue #24348: Drop superfluous incref/decref.
